k8s/platform/mlflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: ml-platform
spec:
  type: ClusterIP
  selector:
    app: mlflow
  ports:
    - name: http
      port: 5000
      targetPort: http
